--- a/manifest-review.yml
+++ b/manifest-review.yml
@@ -4,3 +4,5 @@ applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
   host: kss-erm-pal-tracker-review
+  env:
+    WELCOME_MESSAGE: "Hello from the review environment"
