added database time entries

--- a/manifest-review.yml
+++ b/manifest-review.yml
@@ -6,3 +6,5 @@ applications:
   host: kss-erm-pal-tracker-review
   env:
     WELCOME_MESSAGE: "Hello from the review environment"
+  services:
+  - tracker-database
