--- a/manifest-production.yml
+++ b/manifest-production.yml
@@ -6,3 +6,5 @@ applications:
   host: kss-erm-pal-tracker-production
   env:
     WELCOME_MESSAGE: "Hello from the production environment"
+  services:
+  - tracker-database
