security standards implemented

--- a/manifest-production.yml
+++ b/manifest-production.yml
@@ -6,5 +6,6 @@ applications:
   host: kss-erm-pal-tracker-production
   env:
     WELCOME_MESSAGE: "Hello from the production environment"
+    SECURITY_FORCE_HTTPS: true
   services:
   - tracker-database
