--- a/manifest-review.yml
+++ b/manifest-review.yml
@@ -6,5 +6,6 @@ applications:
   host: kss-erm-pal-tracker-review
   env:
     WELCOME_MESSAGE: "Hello from the review environment"
+    SECURITY_FORCE_HTTPS: true
   services:
   - tracker-database
